[gd_scene load_steps=3 format=3 uid="uid://bsn66mwfg7trs"]

[ext_resource type="Script" uid="uid://5fnuloe87sak" path="res://game/pickable_tile.gd" id="1_aykos"]
[ext_resource type="Texture2D" uid="uid://dgumx31nso486" path="res://game/shared/graphics/images/L/tile_24x24_L_opaque.png" id="2_lmy6g"]

[node name="PickableTile" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_aykos")
metadata/_custom_type_script = "uid://5fnuloe87sak"

[node name="RotateLeft" type="Button" parent="."]
layout_mode = 2
text = "<"

[node name="TileButton" type="Button" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
flat = true

[node name="Tile" type="TextureRect" parent="TileButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(24, 24)
texture = ExtResource("2_lmy6g")

[node name="RotateRight" type="Button" parent="."]
layout_mode = 2
text = ">"

[connection signal="pressed" from="RotateLeft" to="." method="_on_rotate_pressed" binds= [-1.571]]
[connection signal="pressed" from="TileButton" to="." method="_on_tile_button_pressed"]
[connection signal="pressed" from="RotateRight" to="." method="_on_rotate_pressed" binds= [1.571]]
